<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            tools:context=".presentation.HomeActivity"
            >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_logo_app"
                android:id="@+id/home_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="130dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.418"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="319dp"
                android:layout_height="60dp"
                android:rotationY="0"
                android:id="@+id/home_email_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_logo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="56dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_text_input_login_email"
                    android:id="@+id/home_email_text"
                    android:maxLines="1"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="319dp"
                android:layout_height="60dp"
                android:id="@+id/home_password_box"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/home_email_box"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_text_input_login_password"
                    android:id="@+id/home_password_text"
                    android:maxLines="1"
                    android:inputType="text"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/home_recover_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_button_recover_password"
                app:layout_constraintTop_toBottomOf="@+id/home_password_box"
                app:layout_constraintStart_toStartOf="@+id/home_password_box"
                app:icon="@drawable/ic_key"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_marginTop="10dp"/>

        <Button
                android:text="@string/home_button_login"
                android:layout_width="309dp"
                android:layout_height="68dp"
                android:id="@+id/home_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/home_recover_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/home_animation_login"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/home_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintWidth_percent="0.5"
                android:visibility="gone"
                app:lottie_rawRes="@raw/lottie_loading"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>